# dspp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build  build.cmd  ctest  ctest.cmd  main.cpp
.github/workflows/: linux-cxx11.yml  linux-cxx14.yml  linux-cxx17.yml  linux.yml  macos-cxx11.yml  macos-cxx14.yml  macos-cxx17.yml  macos.yml  windows-cxx11.yml  windows-cxx14.yml  windows-cxx17.yml  windows.yml
doc/: spec.md
doc/spec/: allocator.md  fixed.md
include/ds/: all  allocator  array  callable  common  coroutine  file  fixed  fixed_stack  hash_list  hash_map  list  macros  memo  mutex  ordered_list  ordered_map  persistent  queue  random  semaphore  shared  stack  string  string_stream  switch  sys  thread  tuple  unique  unordered_list  unordered_map  variant
include/ds/allocators/: base  heap_forward  local_forward  memo  new_delete
include/ds/traits/: allocator  iterable  iterator
test/: CMakeLists.txt  counter  nocopy  nomove
test/allocator/: allocator.cpp  allocator_nt.cpp  nt_allocator.cpp
test/common/: meta_functions.cpp
test/fixed/: fixed.cpp
test/fixed_stack/: fixed_stack.cpp
test/persistent/: persistent.cpp
test/shared/: shared.cpp
test/sys/: sys.cpp
test/unique/: unique.cpp
